order_creator_ms/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-creator-deployment
  namespace: backend
  annotations:
    consul.hashicorp.com/connect-inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-creator
  template:
    metadata:
      labels:
        app: order-creator
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service: "order-creator"
        consul.hashicorp.com/connect-service-port: "80"
        consul.hashicorp.com/transparent-proxy: "false"
        consul.hashicorp.com/connect-service-upstreams: 'stock-service:6128'
    spec:
      containers:
      - name: order-app
        image: 3alaeddine/order-creator
        resources:
          requests:
            cpu: "100m"     # Minimum 100m (0.1 core)
            memory: "128Mi" # Minimum 128Mi memory
          limits:
            cpu: "500m"     # Max 500m (0.5 core)
            memory: "512Mi" # Max 512Mi memory
        ports:
          - name: ingress-port
            containerPort: 80
