order_creator_ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-creator-service
  namespace: backend
  annotations:
    consul.hashicorp.com/service-name: "order-creator"
    consul.hashicorp.com/service-port: "80"
    consul.hashicorp.com/expose: "true"
spec:
  selector:
    app: order-creator
  ports:
    - name: http-80-port  # Exposing port 80 for HTTP challenge
      protocol: TCP
      port: 80 # Exposed outside for HTTP-01 challenge
      targetPort: 80
  type: NodePort
